2011-08-29  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, fix event-constructors.html test.
        https://bugs.webkit.org/show_bug.cgi?id=63878

        * fast/events/constructors/event-constructors.html:

2011-08-29  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, mark event-constructors.html as failing in chromium.
        https://bugs.webkit.org/show_bug.cgi?id=66756

        * platform/chromium/test_expectations.txt:

2011-08-29  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, adding custom expectation for dom-constructors test in chromium
        until bug 66756 is resolved.
        https://bugs.webkit.org/show_bug.cgi?id=66756

        * platform/chromium/fast/dom/dom-constructors-expected.txt: Added.

2011-08-29  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, mark scrollbars/scrollbar-buttons.html as crashing in chromium.

        * platform/chromium/test_expectations.txt:

2011-08-28  Keishi Hattori  <keishi@webkit.org>

        Chromium Win: Setting square-button appearance reaches NOTREACHED
        https://bugs.webkit.org/show_bug.cgi?id=66918

        Reviewed by Kent Tamura.

        * fast/css/square-button-appearance-expected.txt: Added.
        * fast/css/square-button-appearance.html: Added. Test rendering of square-button appearance.
        * platform/chromium-linux/fast/css/square-button-appearance-expected.png: Added.
        * platform/chromium-win/fast/css/square-button-appearance-expected.png: Added.
        * platform/gtk/test_expectations.txt: Added this test as expected to fail.
        * platform/mac/fast/css/square-button-appearance-expected.png: Added.
        * platform/qt/test_expectations.txt: Added this test as expected to fail.

2011-08-28  Sam Weinig  <sam@webkit.org>

        Add support for constructor syntax for Events
        https://bugs.webkit.org/show_bug.cgi?id=63878

        Reviewed by Oliver Hunt.

        Add basic test for Event constructors.
