@@ -1,4 +1,4 @@
-Tests that debugger will stop on breakpoint.
+Tests setting breakpoints.
 
 Debugger was enabled.
 
@@ -7,15 +7,17 @@ Script source was shown.
 Set timer for test function.
 Script execution paused.
 Call stack:
-    0) testFunction (debugger-pause-on-breakpoint.html:17)
+    0) testFunction (set-breakpoint.html:17)
 Script execution resumed.
 
 Running: testSetBreakpointOnTheLastLine
 Call stack:
-    0) oneLineTestFunction (debugger-pause-on-breakpoint.html:7)
+    0) oneLineTestFunction (set-breakpoint.html:7)
 
 Running: testSetBreakpointOnTheLastLine2
 Call stack:
-    0) oneLineTestFunction2 (debugger-pause-on-breakpoint.html:11)
+    0) oneLineTestFunction2 (set-breakpoint.html:11)
+
+Running: testSetBreakpointOnTheSameLine
 Debugger was disabled.
 
